# OpengGL

./: README.md
01ZHAO_MID/: .gitignore  CMakeLists.txt  readme.md
01ZHAO_MID/assets/shaders/01/: fragment.glsl
01ZHAO_MID/source/glframework/: core.h  geometry.cpp  geometry.h  mesh.cpp  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h
01ZHAO_MID/source/glframework/light/: directionalLight.h
01ZHAO_MID/source/glframework/material/: material.h  phongMaterial.cpp  phongMaterial.h
01ZHAO_MID/source/wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
02ZHAO_MID/assets/shaders/01/: vertex.glsl
02ZHAO_MID/assets/shaders/02/: phong.frag
02ZHAO_MID/assets/shaders/03/: white.vert
02ZHAO_MID/assets/shaders/05/: phong.vert
02ZHAO_MID/assets/shaders/06/: phong.frag
02ZHAO_MID/source/glframework/: mesh.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
02ZHAO_MID/source/glframework/light/: light.h  pointLight.cpp  spotLight.cpp
02ZHAO_MID/source/glframework/material/: material.cpp  material.h  phongMaterial.cpp
02ZHAO_MID/source/glframework/renderer/: renderer.cpp  renderer.h
02ZHAO_MID/source/imgui/: CMakeLists.txt
03ZHAO_MID/: CMakeLists.txt
03ZHAO_MID/assets/shaders/03/: white.frag
03ZHAO_MID/assets/shaders/04/: phong.frag
03ZHAO_MID/assets/shaders/05/: phong.frag
03ZHAO_MID/assets/shaders/06/: phong.frag  phong.vert
03ZHAO_MID/source/glframework/: CMakeLists.txt  geometry.cpp  geometry.h  mesh.cpp  object.cpp  object.h  shader.cpp  shader.h
(+12 files in other folders)
